parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__numeric-binary-4.snap
---
source: parser/src/lexer/lexer.rs
description: 0b100
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b100",
        ),
        start: 0,
        end: 5,
    },
]
