parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__numeric-hexadecimal-18.snap
---
source: parser/src/lexer/lexer.rs
description: "0xC"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xC",
        ),
        start: 0,
        end: 3,
    },
]
