parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__raw-bytes-literals-2.snap
---
source: parser/src/lexer/lexer.rs
description: "rb\"\""
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb\"\"",
        ),
        start: 0,
        end: 4,
    },
]
